--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -13,4 +13,4 @@
 </ul>
 
 <h3>This is where you need to go:</h3>
-<a href ="https://goo.gl/maps/DyGHeswQsz5Rsdwa7"> google map link </a>
+<a href ="https://goo.gl/maps/DyGHeswQsz5Rsdwa7"> googleee map link </a>
